--- a/test.css
+++ b/test.css
@@ -1,5 +1,8 @@
 #message_board{
-  width:100%;
+  position:absolute;
+  top:0;
+  margin-left:auto;
+  margin-right:auto;
   display:block;
   background-color:red;
   color:black;
