--- a/test.css
+++ b/test.css
@@ -41,3 +41,13 @@ a.lnk_brief_desc:hover{
 	outline-style:solid;
 	outline-color:rgb(255,255,255);
 }
+
+#content{
+	min-width:50%;
+	min-height:50%;
+	margin-top:auto;
+	margin-bottom:auto;
+	margin-left:auto;
+	margin-right:auto;
+	background-color:rgb(0,255,255);
+}
