--- a/test.css
+++ b/test.css
@@ -41,13 +41,53 @@ a.lnk_brief_desc:hover{
 	outline-style:solid;
 	outline-color:rgb(255,255,255);
 }
-
-#content{
-	min-width:50%;
-	min-height:50%;
+#content_shell{
+	position:absolute;
+	min-width:75%;
+	width:75%;
+	min-height:75%;
+	height:75%;
+	top:20%;
+	left:12%;
 	margin-top:auto;
 	margin-bottom:auto;
 	margin-left:auto;
 	margin-right:auto;
 	background-color:rgb(0,255,255);
+}
+#content{
+	position:absolute;
+	background-color:black;
+	min-width:75%;
+	width:75%;
+	min-height:75px;
+	top:50%;
+	margin-top:-35px;
+	margin-bottom:auto;
+	margin-left:12.5%;
+}
+#frm_search{
+	color:rgb(255,255,255);
+	margin-left:0%;
+	margin-top:10px;
+	text-align:center;
+}
+#lnk_search{
+	color:rgb(255,255,255);
+	margin-left:0%;
+	margin-top:10px;
+	text-align:center;
+}
+a.lnk_search:visited{
+	color:rgb(0,255,255);
+}
+a.lnk_search:hover{
+	color:rgb(255,255,0);
+	outline-style:solid;
+	outline-color:rgb(255,255,255);
+}
+table#tbl_search_center{
+	margin-left:auto;
+	margin-right:auto;
+	text-align:center;
 }
