--- a/test.css
+++ b/test.css
@@ -24,7 +24,25 @@ li{
   text-shadow: 1px 1px 1px rgb(0,0,0); 
 }
 #error_list{
-	
+	margin:15px;
+	width:100%;
+	font-weight:bold;
+	font-size:12pt;
+	color:rgb(255,255,255);
+	text-shadow: 1px 1px 1px rgb(0,0,0); 
+	text-align:center;
+}
+#error_list{
+	text-align:center;
+	margin-left:30%;
+	width:45%;
+	max-height:70px;
+	overflow:auto;
+}
+#lbl_error_list{
+	position:absolute;
+	left:51%;
+	margin-left:-50px;
 }
 .lnk_brief{
 	color:rgb(0,255,255);
