--- a/test.css
+++ b/test.css
@@ -1,3 +1,6 @@
+body{
+	background-color:rgb(0,255,255);
+}
 #menu_slide{
 	display:block;
 	position:absolute;
@@ -102,10 +105,18 @@ a.lnk_brief_desc:hover{
 	margin-left:auto;
 	margin-right:auto;
 	background-color:rgb(0,255,255);
+	border-style:solid;
+	border-width:1px;
+	border-color:rgb(0,255,255);
+	border-radius:15px;
 }
 #content{
 	position:absolute;
-	background-color:black;
+	background-color:white;
+	border-color:black;
+	border-style:solid;
+	border-width:1px;
+	border-radius:15px;
 	min-width:75%;
 	width:75%;
 	min-height:75px;
@@ -113,6 +124,7 @@ a.lnk_brief_desc:hover{
 	margin-top:-35px;
 	margin-bottom:auto;
 	margin-left:12.5%;
+	
 }
 #frm_search{
 	color:rgb(255,255,255);
@@ -125,17 +137,23 @@ a.lnk_brief_desc:hover{
 	margin-left:0%;
 	margin-top:10px;
 	text-align:center;
+	text-shadow: 1px 1px 1px rgb(0,0,0); 
 }
 a.lnk_search:visited{
-	color:rgb(0,255,255);
+	color:rgb(0,0,0);
+	text-shadow: 1px 1px 1px rgb(0,100,100); 
 }
 a.lnk_search:hover{
 	color:rgb(255,255,0);
 	outline-style:solid;
 	outline-color:rgb(255,255,255);
+	text-shadow: 1px 1px 1px rgb(0,0,0); 
 }
 table#tbl_search_center{
 	margin-left:auto;
 	margin-right:auto;
 	text-align:center;
+}
+label{
+	color:black;
 }
