--- a/test.css
+++ b/test.css
@@ -12,11 +12,14 @@ body{
 	background-color:black;
 	height:95px;
 }
+.action_menu{
+	z-index:15;
+}
 #menu_button{
 	width:100%;
 	height:100%;
 	text-align:center;
-	z-index:15;
+	z-index:11;
 }
 #message_board{
   position:absolute;
