--- a/test.css
+++ b/test.css
@@ -15,10 +15,14 @@ body{
 .action_menu{
 	z-index:15;
 }
+.main_nav{
+	border-radius:15px;
+}
 #menu_button{
 	width:100%;
 	height:100%;
 	text-align:center;
+	border-radius:15px;
 	z-index:11;
 }
 #message_board{
