--- a/test.css
+++ b/test.css
@@ -1,5 +1,6 @@
 body{
 	background-color:rgb(0,255,255);
+	background-color:white;
 }
 #menu_slide{
 	display:block;
@@ -9,19 +10,33 @@ body{
 	z-index:10;
 	border-radius:15px;
 	border: 2px solid;
-	background-color:black;
-	height:95px;
+	background-color:white;
+	min-height:95px;
+	height:100%;
+	min-width:95px;
 }
 .action_menu{
 	z-index:15;
 }
+.close_button{
+	position:relative;
+	left:4px;
+	top:2px;
+	background-color:red;
+	border-radius:360px;
+	z-index:16;
+}
 .main_nav{
 	border-radius:15px;
+	float:left;
+	min-width:95px;
+	min-height:95%;
 }
 #menu_button{
 	width:100%;
 	height:100%;
 	text-align:center;
+	vertical-align: text-top;
 	border-radius:15px;
 	z-index:11;
 }
@@ -45,7 +60,8 @@ li{
   font-weight:bold;
   font-size:12pt;
   color:rgb(255,255,255);
-  text-shadow: 1px 1px 1px rgb(0,0,0); 
+  color:rgb(0,0,0);
+  text-shadow: 0px 0px 0px rgb(0,0,0); 
 }
 
 .desc_label{
