--- a/test.css
+++ b/test.css
@@ -16,7 +16,7 @@ body{
 	min-width:95px;
 }
 .action_menu{
-	z-index:15;
+	z-index:15;ss
 }
 .close_button{
 	position:relative;
@@ -25,6 +25,9 @@ body{
 	background-color:red;
 	border-radius:360px;
 	z-index:16;
+}
+#menu_start_txt{
+	color:rgb(0,0,0);
 }
 .main_nav{
 	border-radius:15px;
