--- a/test.css
+++ b/test.css
@@ -16,7 +16,7 @@ body{
 	min-width:95px;
 }
 .action_menu{
-	z-index:15;ss
+	z-index:15;
 }
 .close_button{
 	position:relative;
@@ -25,6 +25,7 @@ body{
 	background-color:red;
 	border-radius:360px;
 	z-index:16;
+	cursor:pointer;
 }
 #menu_start_txt{
 	color:rgb(0,0,0);
