--- a/test.css
+++ b/test.css
@@ -12,8 +12,8 @@ body{
 	border: 2px solid;
 	background-color:white;
 	min-height:95px;
-	height:100%;
-	min-width:95px;
+	height:95px;
+	width:100%;
 }
 .action_menu{
 	z-index:2;
